--- a/src/app/dashboard/components/tabla-pos/tabla-pos.component.html
+++ b/src/app/dashboard/components/tabla-pos/tabla-pos.component.html
@@ -25,12 +25,16 @@
       <th mat-header-cell *matHeaderCellDef> Acciones </th>
       <td mat-cell *matCellDef="let pos">
         <button mat-icon-button [cdkCopyToClipboard]="pos.token" (click)="copiado()" matTooltip="Copiar token"
-          matTooltipPosition="left" matTooltipHideDelay="100" title="Copiar token">
+          matTooltipPosition="above" matTooltipHideDelay="100" title="Copiar token">
           <mat-icon>copy</mat-icon>
         </button>
-        <button mat-icon-button (click)="editarPos(pos)" matTooltip="Editar perfil" matTooltipPosition="right"
-          matTooltipHideDelay="100" title="Editar perfil">
+        <button mat-icon-button (click)="editarPos(pos)" matTooltip="Editar punto de venta" matTooltipPosition="above"
+          matTooltipHideDelay="100" title="Editar punto de venta">
           <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-icon-button color="warn" (click)="regenerarToken(pos)" matTooltip="Regenerar token"
+          matTooltipPosition="above" matTooltipHideDelay="100" title="Regenerar token">
+          <mat-icon>restore</mat-icon>
         </button>
       </td>
     </ng-container>
