--- a/src/app/shared/verificar-cuenta/verificar-cuenta.component.css
+++ b/src/app/shared/verificar-cuenta/verificar-cuenta.component.css
@@ -1,7 +1,3 @@
-.colorpick {
-  height: 1.2em;
-}
-
 form {
   display: flex;
   flex-direction: column;
@@ -19,11 +15,16 @@ form {
 }
 
 mat-form-field {
-  width: 49%;
+  width: 100%;
+}
+
+.espaciado{
+  display: flex;
+  gap: 1em;
 }
 
 div.errors {
-  background-color: #9d2a37;
+  background-color: var(--warn-color);
   padding: 1em;
   border-radius: 5px;
   margin: .3em;
@@ -32,6 +33,28 @@ div.errors {
 
 div.errors strong {
   display: block;
+}
+
+div.info {
+  background-color: var(--primary-color);
+  color: white;
+  padding: 1em;
+  border-radius: 5px;
+  margin: .3em;
+  margin-bottom: 1em;
+}
+
+div.info strong {
+  display: block;
+}
+
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
 }
 
 @media screen and (max-width:575px) {
