--- a/src/app/dashboard/components/form-articulo/form-articulo.component.html
+++ b/src/app/dashboard/components/form-articulo/form-articulo.component.html
@@ -26,9 +26,9 @@
 
       <mat-form-field appearance="outline">
         <mat-label>Código de barras</mat-label>
-        <input formControlName="codBarras" [readonly]="false" matNativeControl type="text">
+        <input formControlName="codbarras" [readonly]="false" matNativeControl type="text">
         <mat-icon matPrefix>qr_code</mat-icon>
-        <mat-error color="red">{{ errorMessage('codBarras','El código de barras no es válido') }}</mat-error>
+        <mat-error color="red">{{ errorMessage('codbarras','El código de barras no es válido') }}</mat-error>
       </mat-form-field>
 
       <mat-form-field appearance="outline">
