--- a/src/app/dashboard/components/form-articulo/form-articulo.component.html
+++ b/src/app/dashboard/components/form-articulo/form-articulo.component.html
@@ -6,7 +6,7 @@
     <strong *ngIf="data.errors['nombre_corto']">{{data.errors['nombre_corto']}}</strong>
     <strong *ngIf="data.errors['color']">{{data.errors['color']}}</strong>
     <strong *ngIf="data.errors['familia']">{{data.errors['familia']}}</strong>
-    <strong *ngIf="data.errors['codBarras']">{{data.errors['codBarras']}}</strong>
+    <strong *ngIf="data.errors['codbarras']">{{data.errors['codbarras']}}</strong>
   </div>
   <form [formGroup]="editarArticulo">
     <div class="aligned">
