--- a/src/app/dashboard/components/tabla-articulos/tabla-articulos.component.html
+++ b/src/app/dashboard/components/tabla-articulos/tabla-articulos.component.html
@@ -20,7 +20,7 @@
     </ng-container>
     <ng-container matColumnDef="codBarras">
       <th mat-header-cell *matHeaderCellDef> Código de barras </th>
-      <td mat-cell *matCellDef="let articulo" class="acorta"> {{articulo.codBarras || "-"}} </td>
+      <td mat-cell *matCellDef="let articulo" class="acorta"> {{articulo.codbarras || "-"}} </td>
     </ng-container>
     <ng-container matColumnDef="familia">
       <th mat-header-cell *matHeaderCellDef> Familia </th>
